# jean-shell

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  TODO  mkdocs.yml  noxfile.py  pyproject.toml  setup.py
.github/workflows/: checks.yml
docs/: gen_api_pages.py  index.md
docs/core-concepts/: commands.md  index.md  manifests.md  tasks.md
docs/systems/: posix.md
jiac/: __init__.py  manifest.py  resources.py  shell.py  stream.py  task.py  template.py  testing.py
jiac/systems/: local.py  posix.py  ssh.py
jiac/systems/incus/: cli.py  instance.py  network.py  node.py  object.py  profile.py  project.py  storage.py
jiac/tools/: resources.py
jshell/: __main__.py  apt.py  cli.py  command.py  shell.py  ssh.py  streams.py  sudo.py
jshell/cli/: __init__.py  __main__.py
jshell/core/: command.py  config.py  inventory.py  pipe.py  resource.py  shared_resource.py  shell.py
jshell/operations/: apt.py
jshell/shells/: __init__.py  local.py  ssh.py  sudo.py
jtoto/: __init__.py  manifest.py  resources.py  shell.py  stream.py  task.py  template.py  testing.py
jtoto/systems/: local.py  posix.py  ssh.py  sudo.py
tests/: test_apt.py  test_command.py  test_config.py  test_inventory.py  test_resources.py  test_shell.py  test_ssh.py  test_stream.py  test_streams.py  test_sudo.py  test_task.py  test_template.py
tests/_mocks/: mock_shell.py
tests/core/: test_command.py  test_config.py  test_inventory.py  test_pipe.py  test_resource.py  test_shared_resource.py  test_shell.py  test_streams.py
tests/mocks/: mock_shell.py
tests/operations/: test_apt.py
tests/packaging/: test_apt.py
tests/shells/: test_local.py  test_shell.py  test_ssh.py  test_sudo.py
tests/systems/: test_local.py  test_os.py  test_posix.py  test_ssh.py  test_unix.py
tests/test_config/: inventory.py
tests/tools/: test_resources.py
(+45 files in other folders)
