[project]
name = "jshell"
version = "0.0.1"
authors = [
  {name = "Jean-Loutre", email ="jean-loutre@gmx.com"}
]
description = "Infrastructure as code framework"
license = {text = "WTFPL"}
readme = "README.md"
dependencies = [
  "click",
  "asyncssh",
  "aiofile",
  "pyyaml"
]

[project.optional-dependencies]
dev = [
  "nox",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-datadir",
]

[project.scripts]
jshell = "jshell.cli.__main__:main"

[build-system]
requires = ["setuptools>=45"]

[tool.setuptools.package-data]
jshell = ["py.typed"]

[tool.pylint.messages_control]
max-line-length = 80
disable = [
  "fixme",
  "invalid-name",
  "missing-docstring",
  "too-few-public-methods",
  "duplicate-code"
]

[tool.isort]
profile = "black"
src_paths = ["jshell", "tests", "noxfile.py"]

[tool.mypy]
strict = true
files = "jshell/**/*.py,tests/**/*.py,noxfile.py"

[tool.pylint]
max-line-length = 110

[tool.pytest.ini_options]
asyncio_mode = "auto"
